Overflow issues

--- a/src/styles/partials/pages/_home.scss
+++ b/src/styles/partials/pages/_home.scss
@@ -333,6 +333,9 @@
       padding-bottom: 100px;
     }
 
+    padding: 0 !important;
+    margin-bottom: -32px !important;
+
     h2 {
       margin-bottom: 24px;
       margin-top: 0;
@@ -425,21 +428,21 @@
   }
 
   .chat {
-    overflow: visible;
-    padding-bottom: 90px;
-    padding-top: 60px;
+    overflow: hidden;
+    padding-bottom: 282px;
+    padding-top: 188px;
     position: relative;
 
     @include media-breakpoint-up(md) {
-      padding-bottom: 105px;
-      padding-top: 75px;
+      padding-bottom: 328px;
+      padding-top: 234px;
     }
 
     .blob {
       left: -15rem;
       opacity: 0.6;
       position: absolute;
-      top: -5rem;
+      top: calc(-5rem + 50%);
       width: 500px;
 
       @include media-breakpoint-up(md) {
@@ -448,7 +451,7 @@
 
       @include media-breakpoint-up(lg) {
         opacity: 1;
-        top: -9rem;
+        top: calc(-9rem + 50%);
         width: 600px;
       }
     }
@@ -457,7 +460,7 @@
       opacity: 0.6;
       position: absolute;
       right: -15rem;
-      top: -5rem;
+      top: calc(-5rem + 50%);
       width: 500px;
 
       @include media-breakpoint-up(md) {
@@ -466,7 +469,7 @@
 
       @include media-breakpoint-up(lg) {
         opacity: 1;
-        top: -9rem;
+        top: calc(-9rem + 50%);
         width: 600px;
       }
     }
@@ -522,6 +525,8 @@
       padding-bottom: 260px;
       padding-top: 100px;
     }
+    padding: 0 !important;
+    margin-top: -32px !important;
 
     h2 {
       margin-bottom: 24px;
